deploy: 2efebccc60035458fd6c05506e2688eee690b551

--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -1,7 +1,7 @@
 {
   "Please select a language from the dropdown.": "الرجاء اختيار لغة من القائمة المنسدلة.",
-  "Please select a language:": "الرجاء اختيار لغة:",
   "Select Language": "اختر اللغة",
+  "Select language domain": "اختر دامنه لغة",
   "Tasks": "المهام",
   "Unlock Points": "فتح النقاط",
   "Rate this Challenge": "قيّم هذا التحدي",
@@ -16,5 +16,74 @@
   "Show Tour Button": "إظهار زر الجولة",
   "Start Tour": "بدء الجولة",
   "Feedback": "تعليق",
-  "We'd love your feedback!": "نحن نحب تعليقاتك!"
+  "We'd love your feedback!": "نحن نحب تعليقاتك!",
+  "Start": "ابدأ",
+  "Player Profile": "ملف اللاعب",
+  "Save": "حفظ",
+  "Congratulations! You've completed the challenge successfully.": "تهانينا! لقد أكملت التحدي بنجاح.",
+  "Excellent!": "ممتاز!",
+  "Good job!": "عمل جيد!",
+  "Fair attempt.": "محاولة جيدة.",
+  "Keep practicing!": "استمر في التدريب!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "أداؤك يظهر مدى فهمك الحالي. استمر في التدريب لتحسين مستواك!",
+  "Settings": "إعدادات",
+  "Light Theme": "سمة فاتحة",
+  "Dark Theme": "سمة داكنة",
+  "Star Theme": "سمة النجوم",
+  "Sound Volume": "مستوى الصوت",
+  "Loading...": "جارٍ التحميل...",
+  "Music Volume": "مستوى صوت الموسيقى",
+  "Achievements and Certificates": "الإنجازات والشهادات",
+  "Achievements": "الإنجازات",
+  "Certificates": "الشهادات",
+  "Challenge History": "سجل التحديات",
+  "Challenges": "التحديات",
+  "No challenges completed yet.": "لم يتم إكمال أي تحديات بعد.",
+  "challenges completed.": "تحديات مكتملة.",
+  "Challenge": "تحدي",
+  "Result": "النتيجة",
+  "XP required": "نقاط الخبرة المطلوبة",
+  "Type:": "النوع:",
+  "Tasks:": "المهام:",
+  "Variant:": "النوع الفرعي:",
+  "View Challenge →": "عرض التحدي →",
+  "ID:": "المعرف:",
+  "Item": "عنصر",
+  "of": "من",
+  "Help": "مساعدة",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "املأ الفراغات عن طريق اختيار الخيار المناسب لكل قائمة منسدلة.",
+  "Hints:": "تلميحات:",
+  "The correct answer is: ": "الإجابة الصحيحة هي: ",
+  "Select an option": "اختر خيارًا",
+  "Success Rate": "معدل النجاح",
+  "High Performance": "أداء عالي",
+  "Medium Performance": "أداء متوسط",
+  "Needs Improvement": "يحتاج إلى تحسين",
+  "seconds": "ثواني",
+  "Share": "مشاركة",
+  "Link copied to clipboard!": "تم نسخ الرابط إلى الحافظة!",
+  "No text found": "لم يتم العثور على نص",
+  "Scroll down": "التمرير لأسفل",
+  "Next": "التالي",
+  "Select Level": "اختر المستوى",
+  "Read aloud": "قراءة بصوت عال",
+  "No vocabulary items available.": "لا توجد عناصر مفردات متاحة.",
+  "Page": "صفحة",
+  "items": "عناصر",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "راجع هذه الكلمات المفردات ومعانيها. انقر على زر الاستماع لسماع النطق.",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "استخدم أزرار السابق/التالي للتنقل بين صفحات المفردات.",
+  "Enhance your learning with our premium educational resources.": "عزز تعلمك بمواردنا التعليمية المميزة.",
+  "No spam. Unsubscribe anytime.": "لا رسائل مزعجة. يمكنك إلغاء الاشتراك في أي وقت.",
+  "Secure checkout": "دفع آمن",
+  "Ad blocker detected. Please consider supporting us:": "تم اكتشاف مانع الإعلانات. يرجى دعمنا:",
+  "Powered by Gumroad": "مدعوم من Gumroad",
+  "Free articles & tutorials": "مقالات ودروس مجانية",
+  "Advertisement": "إعلان",
+  "Subscribe now": "اشترك الآن",
+  "Subscribe to stay up to date and unlock exclusive new content!": "اشترك للبقاء على اطلاع والحصول على محتوى حصري جديد!",
+  "Visit our Blog": "زر مدونتنا",
+  "Read our Blog": "اقرأ مدونتنا",
+  "Want more interactive exercises?": "هل تريد المزيد من التمارين التفاعلية؟",
+  "Get it now": "احصل عليه الآن",
+  "Ad blocker detected. Please consider disabling it to support us.": "تم اكتشاف مانع الإعلانات. يرجى تعطيله لدعمنا."
 }
