--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "Please select a language from the dropdown.": "Please select a language from the dropdown.",
-  "Please select a language:": "Please select a language:",
   "Select Language": "Select Language",
+  "Select language domain": "Select language domain",
   "Tasks": "Tasks",
   "Unlock Points": "Unlock Points",
   "Rate this Challenge": "Rate this Challenge",
@@ -16,5 +16,74 @@
   "Show Tour Button": "Show Tour Button",
   "Start Tour": "Start Tour",
   "Feedback": "Feedback",
-  "We'd love your feedback!": "We'd love your feedback!"
+  "We'd love your feedback!": "We'd love your feedback!",
+  "Start": "Start",
+  "Player Profile": "Player Profile",
+  "Save": "Save",
+  "Congratulations! You've completed the challenge successfully.": "Congratulations! You've completed the challenge successfully.",
+  "Excellent!": "Excellent!",
+  "Good job!": "Good job!",
+  "Fair attempt.": "Fair attempt.",
+  "Keep practicing!": "Keep practicing!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Your performance shows your current understanding. Keep practicing to improve!",
+  "Settings": "Settings",
+  "Light Theme": "Light Theme",
+  "Dark Theme": "Dark Theme",
+  "Star Theme": "Star Theme",
+  "Sound Volume": "Sound Volume",
+  "Loading...": "Loading...",
+  "Music Volume": "Music Volume",
+  "Achievements and Certificates": "Achievements and Certificates",
+  "Achievements": "Achievements",
+  "Certificates": "Certificates",
+  "Challenge History": "Challenge History",
+  "Challenges": "Challenges",
+  "No challenges completed yet.": "No challenges completed yet.",
+  "challenges completed.": "challenges completed.",
+  "Challenge": "Challenge",
+  "Result": "Result",
+  "XP required": "XP required",
+  "Type:": "Type:",
+  "Tasks:": "Tasks:",
+  "Variant:": "Variant:",
+  "View Challenge →": "View Challenge →",
+  "ID:": "ID:",
+  "Item": "Item",
+  "of": "of",
+  "Help": "Help",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Fill in the blanks by selecting the appropriate option for each dropdown.",
+  "Hints:": "Hints:",
+  "The correct answer is: ": "The correct answer is: ",
+  "Select an option": "Select an option",
+  "Success Rate": "Success Rate",
+  "High Performance": "High Performance",
+  "Medium Performance": "Medium Performance",
+  "Needs Improvement": "Needs Improvement",
+  "seconds": "seconds",
+  "Share": "Share",
+  "Link copied to clipboard!": "Link copied to clipboard!",
+  "No text found": "No text found",
+  "Scroll down": "Scroll down",
+  "Next": "Next",
+  "Select Level": "Select Level",
+  "Read aloud": "Read aloud",
+  "No vocabulary items available.": "No vocabulary items available.",
+  "Page": "Page",
+  "items": "items",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "Use the Previous/Next buttons to navigate between vocabulary pages.",
+  "Enhance your learning with our premium educational resources.": "Enhance your learning with our premium educational resources.",
+  "No spam. Unsubscribe anytime.": "No spam. Unsubscribe anytime.",
+  "Secure checkout": "Secure checkout",
+  "Ad blocker detected. Please consider supporting us:": "Ad blocker detected. Please consider supporting us:",
+  "Powered by Gumroad": "Powered by Gumroad",
+  "Free articles & tutorials": "Free articles & tutorials",
+  "Advertisement": "Advertisement",
+  "Subscribe now": "Subscribe now",
+  "Subscribe to stay up to date and unlock exclusive new content!": "Subscribe to stay up to date and unlock exclusive new content!",
+  "Visit our Blog": "Visit our Blog",
+  "Read our Blog": "Read our Blog",
+  "Want more interactive exercises?": "Want more interactive exercises?",
+  "Get it now": "Get it now",
+  "Ad blocker detected. Please consider disabling it to support us.": "Ad blocker detected. Please consider disabling it to support us."
 }
