--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -1,7 +1,7 @@
 {
   "Please select a language from the dropdown.": "Por favor, seleccione un idioma del menú desplegable.",
-  "Please select a language:": "Por favor, seleccione un idioma:",
   "Select Language": "Seleccionar idioma",
+  "Select language domain": "Seleccionar dominio de idioma",
   "Tasks": "Tareas",
   "Unlock Points": "Desbloquear puntos",
   "Rate this Challenge": "Calificar este desafío",
@@ -16,5 +16,74 @@
   "Show Tour Button": "Mostrar botón de recorrido",
   "Start Tour": "Comenzar recorrido",
   "Feedback": "Comentarios",
-  "We'd love your feedback!": "¡Nos encantaría recibir sus comentarios!"
+  "We'd love your feedback!": "¡Nos encantaría recibir sus comentarios!",
+  "Start": "Comenzar",
+  "Player Profile": "Perfil del jugador",
+  "Save": "Guardar",
+  "Congratulations! You've completed the challenge successfully.": "¡Felicidades! Has completado el desafío con éxito.",
+  "Excellent!": "¡Excelente!",
+  "Good job!": "¡Buen trabajo!",
+  "Fair attempt.": "Intento aceptable.",
+  "Keep practicing!": "¡Sigue practicando!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Tu rendimiento muestra tu comprensión actual. ¡Sigue practicando para mejorar!",
+  "Settings": "Configuración",
+  "Light Theme": "Tema claro",
+  "Dark Theme": "Tema oscuro",
+  "Star Theme": "Tema de estrellas",
+  "Sound Volume": "Volumen de sonido",
+  "Loading...": "Cargando...",
+  "Music Volume": "Volumen de la música",
+  "Achievements and Certificates": "Logros y Certificados",
+  "Achievements": "Logros",
+  "Certificates": "Certificados",
+  "Challenge History": "Historial de desafíos",
+  "Challenges": "Desafíos",
+  "No challenges completed yet.": "Aún no se han completado desafíos.",
+  "challenges completed.": "desafíos completados.",
+  "Challenge": "Desafío",
+  "Result": "Resultado",
+  "XP required": "XP requerida",
+  "Type:": "Tipo:",
+  "Tasks:": "Tareas:",
+  "Variant:": "Variante:",
+  "View Challenge →": "Ver desafío →",
+  "ID:": "ID:",
+  "Item": "Elemento",
+  "of": "de",
+  "Help": "Ayuda",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Rellena los espacios en blanco seleccionando la opción adecuada para cada menú desplegable.",
+  "Hints:": "Pistas:",
+  "The correct answer is: ": "La respuesta correcta es: ",
+  "Select an option": "Selecciona una opción",
+  "Success Rate": "Tasa de éxito",
+  "High Performance": "Alto rendimiento",
+  "Medium Performance": "Rendimiento medio",
+  "Needs Improvement": "Necesita mejorar",
+  "seconds": "segundos",
+  "Share": "Compartir",
+  "Link copied to clipboard!": "¡Enlace copiado al portapapeles!",
+  "No text found": "No se encontró texto",
+  "Scroll down": "Desplazarse hacia abajo",
+  "Next": "Siguiente",
+  "Select Level": "Seleccionar nivel",
+  "Read aloud": "Leer en voz alta",
+  "No vocabulary items available.": "No hay elementos de vocabulario disponibles.",
+  "Page": "Página",
+  "items": "elementos",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Revisa estas palabras de vocabulario y sus significados. Haz clic en el botón de escuchar para oír la pronunciación.",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "Usa los botones Anterior/Siguiente para navegar entre las páginas de vocabulario.",
+  "Enhance your learning with our premium educational resources.": "Mejora tu aprendizaje con nuestros recursos educativos premium.",
+  "No spam. Unsubscribe anytime.": "Sin spam. Puedes darte de baja en cualquier momento.",
+  "Secure checkout": "Pago seguro",
+  "Ad blocker detected. Please consider supporting us:": "Se ha detectado un bloqueador de anuncios. Por favor, considera apoyarnos:",
+  "Powered by Gumroad": "Desarrollado por Gumroad",
+  "Free articles & tutorials": "Artículos y tutoriales gratuitos",
+  "Advertisement": "Publicidad",
+  "Subscribe now": "Suscríbete ahora",
+  "Subscribe to stay up to date and unlock exclusive new content!": "¡Suscríbete para mantenerte al día y desbloquear contenido exclusivo!",
+  "Visit our Blog": "Visita nuestro blog",
+  "Read our Blog": "Lee nuestro blog",
+  "Want more interactive exercises?": "¿Quieres más ejercicios interactivos?",
+  "Get it now": "Consíguelo ahora",
+  "Ad blocker detected. Please consider disabling it to support us.": "Se ha detectado un bloqueador de anuncios. Por favor, considera desactivarlo para apoyarnos."
 }
