--- a/assets/i18n/pl.json
+++ b/assets/i18n/pl.json
@@ -1,7 +1,7 @@
 {
   "Please select a language from the dropdown.": "Proszę wybrać język z listy rozwijanej.",
-  "Please select a language:": "Proszę wybrać język:",
   "Select Language": "Wybierz język",
+  "Select language domain": "Wybierz domenę języka",
   "Tasks": "Zadania",
   "Unlock Points": "Odblokuj punkty",
   "Rate this Challenge": "Oceń to wyzwanie",
@@ -16,5 +16,74 @@
   "Show Tour Button": "Pokaż przycisk wycieczki",
   "Start Tour": "Rozpocznij wycieczkę",
   "Feedback": "Opinia",
-  "We'd love your feedback!": "Bardzo chętnie poznamy Twoją opinię!"
+  "We'd love your feedback!": "Bardzo chętnie poznamy Twoją opinię!",
+  "Start": "Start",
+  "Player Profile": "Profil gracza",
+  "Save": "Zapisz",
+  "Congratulations! You've completed the challenge successfully.": "Gratulacje! Ukończyłeś wyzwanie pomyślnie.",
+  "Excellent!": "Doskonały!",
+  "Good job!": "Dobra robota!",
+  "Fair attempt.": "Niezła próba.",
+  "Keep practicing!": "Ćwicz dalej!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Twój wynik pokazuje aktualny poziom zrozumienia. Ćwicz dalej, aby się poprawić!",
+  "Settings": "Ustawienia",
+  "Light Theme": "Jasny motyw",
+  "Dark Theme": "Ciemny motyw",
+  "Star Theme": "Motyw gwiazd",
+  "Sound Volume": "Głośność dźwięku",
+  "Loading...": "Ładowanie...",
+  "Music Volume": "Głośność muzyki",
+  "Achievements and Certificates": "Osiągnięcia i certyfikaty",
+  "Achievements": "Osiągnięcia",
+  "Certificates": "Certyfikaty",
+  "Challenge History": "Historia wyzwań",
+  "Challenges": "Wyzwania",
+  "No challenges completed yet.": "Nie ukończono jeszcze żadnych wyzwań.",
+  "challenges completed.": "ukończonych wyzwań.",
+  "Challenge": "Wyzwanie",
+  "Result": "Wynik",
+  "XP required": "Wymagane XP",
+  "Type:": "Typ:",
+  "Tasks:": "Zadania:",
+  "Variant:": "Wariant:",
+  "View Challenge →": "Zobacz wyzwanie →",
+  "ID:": "ID:",
+  "Item": "Pozycja",
+  "of": "z",
+  "Help": "Pomoc",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Wypełnij luki, wybierając odpowiednią opcję z każdego rozwijanego menu.",
+  "Hints:": "Wskazówki:",
+  "The correct answer is: ": "Poprawna odpowiedź to: ",
+  "Select an option": "Wybierz opcję",
+  "Success Rate": "Wskaźnik sukcesu",
+  "High Performance": "Wysoka wydajność",
+  "Medium Performance": "Średnia wydajność",
+  "Needs Improvement": "Wymaga poprawy",
+  "seconds": "sekundy",
+  "Share": "Udostępnij",
+  "Link copied to clipboard!": "Link skopiowany do schowka!",
+  "No text found": "Nie znaleziono tekstu",
+  "Scroll down": "Przewiń w dół",
+  "Next": "Dalej",
+  "Select Level": "Wybierz poziom",
+  "Read aloud": "Czytaj na głos",
+  "No vocabulary items available.": "Brak dostępnych elementów słownictwa.",
+  "Page": "Strona",
+  "items": "elementy",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Przejrzyj te słowa i ich znaczenia. Kliknij przycisk słuchaj, aby usłyszeć wymowę.",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "Użyj przycisków Poprzedni/Następny, aby nawigować między stronami słownictwa.",
+  "Enhance your learning with our premium educational resources.": "Ulepsz swoje nauczanie dzięki naszym materiałom edukacyjnym premium.",
+  "No spam. Unsubscribe anytime.": "Brak spamu. Możesz zrezygnować w każdej chwili.",
+  "Secure checkout": "Bezpieczna płatność",
+  "Ad blocker detected. Please consider supporting us:": "Wykryto blokadę reklam. Prosimy o wsparcie:",
+  "Powered by Gumroad": "Obsługiwane przez Gumroad",
+  "Free articles & tutorials": "Darmowe artykuły i poradniki",
+  "Advertisement": "Reklama",
+  "Subscribe now": "Subskrybuj teraz",
+  "Subscribe to stay up to date and unlock exclusive new content!": "Subskrybuj, aby być na bieżąco i odblokować ekskluzywne nowe treści!",
+  "Visit our Blog": "Odwiedź nasz blog",
+  "Read our Blog": "Przeczytaj nasz blog",
+  "Want more interactive exercises?": "Chcesz więcej interaktywnych ćwiczeń?",
+  "Get it now": "Zdobądź to teraz",
+  "Ad blocker detected. Please consider disabling it to support us.": "Wykryto blokadę reklam. Prosimy o jej wyłączenie, aby nas wesprzeć."
 }
