--- a/assets/i18n/uk.json
+++ b/assets/i18n/uk.json
@@ -1,7 +1,7 @@
 {
   "Please select a language from the dropdown.": "Будь ласка, виберіть мову зі списку.",
-  "Please select a language:": "Будь ласка, виберіть мову:",
   "Select Language": "Вибрати мову",
+  "Select language domain": "Вибрати домен мови",
   "Tasks": "Завдання",
   "Unlock Points": "Розблокувати бали",
   "Rate this Challenge": "Оцініть це завдання",
@@ -16,5 +16,74 @@
   "Show Tour Button": "Показати кнопку туру",
   "Start Tour": "Почати тур",
   "Feedback": "Зворотній зв'язок",
-  "We'd love your feedback!": "Ми будемо раді вашому відгуку!"
+  "We'd love your feedback!": "Ми будемо раді вашому відгуку!",
+  "Start": "Почати",
+  "Player Profile": "Профіль гравця",
+  "Save": "Зберегти",
+  "Congratulations! You've completed the challenge successfully.": "Вітаємо! Ви успішно виконали завдання.",
+  "Excellent!": "Відмінно!",
+  "Good job!": "Гарна робота!",
+  "Fair attempt.": "Непогана спроба.",
+  "Keep practicing!": "Продовжуйте тренуватися!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Ваш результат показує ваш поточний рівень розуміння. Продовжуйте тренуватися, щоб покращити його!",
+  "Settings": "Налаштування",
+  "Light Theme": "Світла тема",
+  "Dark Theme": "Темна тема",
+  "Star Theme": "Зоряна тема",
+  "Sound Volume": "Гучність звуку",
+  "Loading...": "Завантаження...",
+  "Music Volume": "Гучність музики",
+  "Achievements and Certificates": "Досягнення та сертифікати",
+  "Achievements": "Досягнення",
+  "Certificates": "Сертифікати",
+  "Challenge History": "Історія завдань",
+  "Challenges": "Завдання",
+  "No challenges completed yet.": "Ще не виконано жодного завдання.",
+  "challenges completed.": "виконаних завдань.",
+  "Challenge": "Завдання",
+  "Result": "Результат",
+  "XP required": "Потрібно XP",
+  "Type:": "Тип:",
+  "Tasks:": "Завдання:",
+  "Variant:": "Варіант:",
+  "View Challenge →": "Переглянути завдання →",
+  "ID:": "ID:",
+  "Item": "Елемент",
+  "of": "з",
+  "Help": "Допомога",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Заповніть пропуски, вибравши відповідний варіант для кожного випадаючого списку.",
+  "Hints:": "Підказки:",
+  "The correct answer is: ": "Правильна відповідь: ",
+  "Select an option": "Виберіть варіант",
+  "Success Rate": "Рівень успішності",
+  "High Performance": "Висока продуктивність",
+  "Medium Performance": "Середня продуктивність",
+  "Needs Improvement": "Потрібне покращення",
+  "seconds": "секунд",
+  "Share": "Поділитися",
+  "Link copied to clipboard!": "Посилання скопійовано в буфер обміну!",
+  "No text found": "Текст не знайдено",
+  "Scroll down": "Прокрутити вниз",
+  "Next": "Далі",
+  "Select Level": "Вибрати рівень",
+  "Read aloud": "Читати вголос",
+  "No vocabulary items available.": "Немає доступних елементів словникового запасу.",
+  "Page": "Сторінка",
+  "items": "елементи",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Переглянь ці словникові слова та їх значення. Натисни кнопку слухати, щоб почути вимову.",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "Використовуй кнопки Попередня/Наступна для навігації між сторінками словника.",
+  "Enhance your learning with our premium educational resources.": "Покращуйте своє навчання за допомогою наших преміальних освітніх ресурсів.",
+  "No spam. Unsubscribe anytime.": "Без спаму. Ви можете відписатися в будь-який час.",
+  "Secure checkout": "Безпечна оплата",
+  "Ad blocker detected. Please consider supporting us:": "Виявлено блокувальник реклами. Будь ласка, підтримайте нас:",
+  "Powered by Gumroad": "Працює на Gumroad",
+  "Free articles & tutorials": "Безкоштовні статті та уроки",
+  "Advertisement": "Реклама",
+  "Subscribe now": "Підписатися зараз",
+  "Subscribe to stay up to date and unlock exclusive new content!": "Підпишіться, щоб бути в курсі та отримати ексклюзивний новий контент!",
+  "Visit our Blog": "Відвідайте наш блог",
+  "Read our Blog": "Читайте наш блог",
+  "Want more interactive exercises?": "Бажаєте більше інтерактивних вправ?",
+  "Get it now": "Отримати зараз",
+  "Ad blocker detected. Please consider disabling it to support us.": "Виявлено блокувальник реклами. Будь ласка, вимкніть його, щоб підтримати нас."
 }
