--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -1,7 +1,7 @@
 {
   "Please select a language from the dropdown.": "Vui lòng chọn một ngôn ngữ từ danh sách thả xuống.",
-  "Please select a language:": "Vui lòng chọn một ngôn ngữ:",
   "Select Language": "Chọn Ngôn ngữ",
+  "Select language domain": "Chọn Domen Ngôn ngữ",
   "Tasks": "Nhiệm vụ",
   "Unlock Points": "Mở khóa Điểm",
   "Rate this Challenge": "Đánh giá Thử thách này",
@@ -16,5 +16,74 @@
   "Show Tour Button": "Hiển thị Nút Tour",
   "Start Tour": "Bắt đầu Tour",
   "Feedback": "Phản hồi",
-  "We'd love your feedback!": "Chúng tôi rất vui khi nhận được phản hồi của bạn!"
+  "We'd love your feedback!": "Chúng tôi rất vui khi nhận được phản hồi của bạn!",
+  "Start": "Bắt đầu",
+  "Player Profile": "Hồ sơ người chơi",
+  "Save": "Lưu",
+  "Congratulations! You've completed the challenge successfully.": "Chúc mừng! Bạn đã hoàn thành thử thách thành công.",
+  "Excellent!": "Xuất sắc!",
+  "Good job!": "Làm tốt lắm!",
+  "Fair attempt.": "Cố gắng khá.",
+  "Keep practicing!": "Tiếp tục luyện tập!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Thành tích của bạn thể hiện sự hiểu biết hiện tại. Tiếp tục luyện tập để cải thiện!",
+  "Settings": "Cài đặt",
+  "Light Theme": "Giao diện sáng",
+  "Dark Theme": "Giao diện tối",
+  "Star Theme": "Giao diện ngôi sao",
+  "Sound Volume": "Âm lượng",
+  "Loading...": "Đang tải...",
+  "Music Volume": "Âm lượng nhạc",
+  "Achievements and Certificates": "Thành tích và Chứng chỉ",
+  "Achievements": "Thành tích",
+  "Certificates": "Chứng chỉ",
+  "Challenge History": "Lịch sử thử thách",
+  "Challenges": "Thử thách",
+  "No challenges completed yet.": "Chưa hoàn thành thử thách nào.",
+  "challenges completed.": "thử thách đã hoàn thành.",
+  "Challenge": "Thử thách",
+  "Result": "Kết quả",
+  "XP required": "Cần XP",
+  "Type:": "Loại:",
+  "Tasks:": "Nhiệm vụ:",
+  "Variant:": "Biến thể:",
+  "View Challenge →": "Xem thử thách →",
+  "ID:": "ID:",
+  "Item": "Mục",
+  "of": "trên",
+  "Help": "Trợ giúp",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Điền vào chỗ trống bằng cách chọn tùy chọn phù hợp cho mỗi danh sách thả xuống.",
+  "Hints:": "Gợi ý:",
+  "The correct answer is: ": "Đáp án đúng là: ",
+  "Select an option": "Chọn một tùy chọn",
+  "Success Rate": "Tỷ lệ thành công",
+  "High Performance": "Hiệu suất cao",
+  "Medium Performance": "Hiệu suất trung bình",
+  "Needs Improvement": "Cần cải thiện",
+  "seconds": "giây",
+  "Share": "Chia sẻ",
+  "Link copied to clipboard!": "Liên kết đã được sao chép vào bộ nhớ tạm!",
+  "No text found": "Không tìm thấy văn bản",
+  "Scroll down": "Cuộn xuống",
+  "Next": "Tiếp theo",
+  "Select Level": "Chọn Cấp độ",
+  "Read aloud": "Đọc to",
+  "No vocabulary items available.": "Không có mục từ vựng nào khả dụng.",
+  "Page": "Trang",
+  "items": "mục",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Xem lại những từ vựng này và ý nghĩa của chúng. Nhấp vào nút nghe để nghe cách phát âm.",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "Sử dụng các nút Trước/Tiếp theo để điều hướng giữa các trang từ vựng.",
+  "Enhance your learning with our premium educational resources.": "Nâng cao việc học của bạn với các tài nguyên giáo dục cao cấp của chúng tôi.",
+  "No spam. Unsubscribe anytime.": "Không có thư rác. Bạn có thể hủy đăng ký bất cứ lúc nào.",
+  "Secure checkout": "Thanh toán an toàn",
+  "Ad blocker detected. Please consider supporting us:": "Đã phát hiện trình chặn quảng cáo. Vui lòng hỗ trợ chúng tôi:",
+  "Powered by Gumroad": "Được hỗ trợ bởi Gumroad",
+  "Free articles & tutorials": "Bài viết & hướng dẫn miễn phí",
+  "Advertisement": "Quảng cáo",
+  "Subscribe now": "Đăng ký ngay",
+  "Subscribe to stay up to date and unlock exclusive new content!": "Đăng ký để cập nhật và mở khóa nội dung mới độc quyền!",
+  "Visit our Blog": "Truy cập Blog của chúng tôi",
+  "Read our Blog": "Đọc Blog của chúng tôi",
+  "Want more interactive exercises?": "Bạn muốn có thêm bài tập tương tác?",
+  "Get it now": "Nhận ngay",
+  "Ad blocker detected. Please consider disabling it to support us.": "Đã phát hiện trình chặn quảng cáo. Vui lòng tắt nó để hỗ trợ chúng tôi."
 }
