--- a/assets/i18n/de.json
+++ b/assets/i18n/de.json
@@ -1,7 +1,7 @@
 {
   "Please select a language from the dropdown.": "Bitte wählen Sie eine Sprache aus dem Dropdown-Menü.",
-  "Please select a language:": "Bitte wählen Sie eine Sprache:",
   "Select Language": "Sprache wählen",
+  "Select language domain": "Sprachdomain wählen",
   "Tasks": "Aufgaben",
   "Unlock Points": "Freizuschaltende Punkte",
   "Rate this Challenge": "Bewerten Sie diese Übung",
@@ -16,5 +16,74 @@
   "Show Tour Button": "Tour-Button anzeigen",
   "Start Tour": "Tour starten",
   "Feedback": "Feedback",
-  "We'd love your feedback!": "Wir freuen uns über Ihr Feedback!"
+  "We'd love your feedback!": "Wir freuen uns über Ihr Feedback!",
+  "Start": "Start",
+  "Player Profile": "Spielerprofil",
+  "Save": "Speichern",
+  "Congratulations! You've completed the challenge successfully.": "Herzlichen Glückwunsch! Sie haben die Herausforderung erfolgreich abgeschlossen.",
+  "Excellent!": "Ausgezeichnet!",
+  "Good job!": "Gute Arbeit!",
+  "Fair attempt.": "Guter Versuch.",
+  "Keep practicing!": "Weiter üben!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Ihre Leistung zeigt Ihr aktuelles Verständnis. Üben Sie weiter, um sich zu verbessern!",
+  "Settings": "Einstellungen",
+  "Light Theme": "Helles Design",
+  "Dark Theme": "Dunkles Design",
+  "Star Theme": "Sternen-Design",
+  "Sound Volume": "Lautstärke",
+  "Loading...": "Lädt...",
+  "Music Volume": "Musiklautstärke",
+  "Achievements and Certificates": "Erfolge und Zertifikate",
+  "Achievements": "Erfolge",
+  "Certificates": "Zertifikate",
+  "Challenge History": "Herausforderungsverlauf",
+  "Challenges": "Herausforderungen",
+  "No challenges completed yet.": "Noch keine Herausforderungen abgeschlossen.",
+  "challenges completed.": "abgeschlossene Herausforderungen.",
+  "Challenge": "Herausforderung",
+  "Result": "Ergebnis",
+  "XP required": "XP benötigt",
+  "Type:": "Typ:",
+  "Tasks:": "Aufgaben:",
+  "Variant:": "Variante:",
+  "View Challenge →": "Übung ansehen →",
+  "ID:": "ID:",
+  "Item": "Element",
+  "of": "von",
+  "Help": "Hilfe",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Füllen Sie die Lücken aus, indem Sie die passende Option für jedes Dropdown auswählen.",
+  "Hints:": "Hinweise:",
+  "The correct answer is: ": "Die richtige Antwort ist: ",
+  "Select an option": "Option auswählen",
+  "Success Rate": "Erfolgsquote",
+  "High Performance": "Hohe Leistung",
+  "Medium Performance": "Mittlere Leistung",
+  "Needs Improvement": "Verbesserungsbedarf",
+  "seconds": "Sekunden",
+  "Share": "Teilen",
+  "Link copied to clipboard!": "Link in die Zwischenablage kopiert!",
+  "No text found": "Kein Text gefunden",
+  "Scroll down": "Nach unten scrollen",
+  "Next": "Weiter",
+  "Select Level": "Level auswählen",
+  "Read aloud": "Vorlesen",
+  "No vocabulary items available.": "Keine Vokabeln verfügbar.",
+  "Page": "Seite",
+  "items": "Elemente",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Überprüfen Sie diese Vokabeln und ihre Bedeutungen. Klicken Sie auf die Anhören-Schaltfläche, um die Aussprache zu hören.",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "Verwenden Sie die Zurück/Weiter-Schaltflächen, um zwischen den Vokabelseiten zu navigieren.",
+  "Enhance your learning with our premium educational resources.": "Verbessern Sie Ihr Lernen mit unseren hochwertigen Lernmaterialien.",
+  "No spam. Unsubscribe anytime.": "Kein Spam. Sie können sich jederzeit abmelden.",
+  "Secure checkout": "Sicherer Checkout",
+  "Ad blocker detected. Please consider supporting us:": "Adblocker erkannt. Bitte unterstützen Sie uns:",
+  "Powered by Gumroad": "Bereitgestellt von Gumroad",
+  "Free articles & tutorials": "Kostenlose Artikel & Tutorials",
+  "Advertisement": "Anzeige",
+  "Subscribe now": "Jetzt abonnieren",
+  "Subscribe to stay up to date and unlock exclusive new content!": "Abonnieren Sie, um auf dem Laufenden zu bleiben und exklusive neue Inhalte freizuschalten!",
+  "Visit our Blog": "Besuchen Sie unseren Blog",
+  "Read our Blog": "Lesen Sie unseren Blog",
+  "Want more interactive exercises?": "Möchten Sie mehr interaktive Übungen?",
+  "Get it now": "Jetzt erhalten",
+  "Ad blocker detected. Please consider disabling it to support us.": "Adblocker erkannt. Bitte deaktivieren Sie ihn, um uns zu unterstützen."
 }
