--- a/assets/i18n/tr.json
+++ b/assets/i18n/tr.json
@@ -1,7 +1,7 @@
 {
   "Please select a language from the dropdown.": "Lütfen açılır menüden bir dil seçin.",
-  "Please select a language:": "Lütfen bir dil seçin:",
   "Select Language": "Dil Seçin",
+  "Select language domain": "Dil Domenini Seçin",
   "Tasks": "Görevler",
   "Unlock Points": "Puanları Aç",
   "Rate this Challenge": "Bu Meydan Okumayı Değerlendir",
@@ -16,5 +16,74 @@
   "Show Tour Button": "Tur Düğmesini Göster",
   "Start Tour": "Turu Başlat",
   "Feedback": "Geribildirim",
-  "We'd love your feedback!": "Geribildiriminizi çok isteriz!"
+  "We'd love your feedback!": "Geribildiriminizi çok isteriz!",
+  "Start": "Başlat",
+  "Player Profile": "Oyuncu Profili",
+  "Save": "Kaydet",
+  "Congratulations! You've completed the challenge successfully.": "Tebrikler! Meydan okumayı başarıyla tamamladınız.",
+  "Excellent!": "Mükemmel!",
+  "Good job!": "İyi iş!",
+  "Fair attempt.": "Fena değil.",
+  "Keep practicing!": "Çalışmaya devam et!",
+  "Your performance shows your current understanding. Keep practicing to improve!": "Performansınız mevcut anlayışınızı gösteriyor. Gelişmek için çalışmaya devam edin!",
+  "Settings": "Ayarlar",
+  "Light Theme": "Açık Tema",
+  "Dark Theme": "Koyu Tema",
+  "Star Theme": "Yıldız Teması",
+  "Sound Volume": "Ses Seviyesi",
+  "Loading...": "Yükleniyor...",
+  "Music Volume": "Müzik Sesi",
+  "Achievements and Certificates": "Başarılar ve Sertifikalar",
+  "Achievements": "Başarılar",
+  "Certificates": "Sertifikalar",
+  "Challenge History": "Meydan Okuma Geçmişi",
+  "Challenges": "Meydan Okumalar",
+  "No challenges completed yet.": "Henüz hiç meydan okuma tamamlanmadı.",
+  "challenges completed.": "tamamlanan meydan okuma.",
+  "Challenge": "Meydan Okuma",
+  "Result": "Sonuç",
+  "XP required": "XP gerekli",
+  "Type:": "Tür:",
+  "Tasks:": "Görevler:",
+  "Variant:": "Varyant:",
+  "View Challenge →": "Meydan okumayı görüntüle →",
+  "ID:": "Kimlik:",
+  "Item": "Öğe",
+  "of": "üzerinden",
+  "Help": "Yardım",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "Her açılır menü için uygun seçeneği seçerek boşlukları doldurun.",
+  "Hints:": "İpuçları:",
+  "The correct answer is: ": "Doğru cevap: ",
+  "Select an option": "Bir seçenek seçin",
+  "Success Rate": "Başarı Oranı",
+  "High Performance": "Yüksek Performans",
+  "Medium Performance": "Orta Performans",
+  "Needs Improvement": "Geliştirilmesi Gerekiyor",
+  "seconds": "saniye",
+  "Share": "Paylaş",
+  "Link copied to clipboard!": "Bağlantı panoya kopyalandı!",
+  "No text found": "Metin bulunamadı",
+  "Scroll down": "Aşağı kaydır",
+  "Next": "İleri",
+  "Select Level": "Seviye Seç",
+  "Read aloud": "Sesli oku",
+  "No vocabulary items available.": "Mevcut kelime öğesi yok.",
+  "Page": "Sayfa",
+  "items": "öğeler",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Bu kelime öğelerini ve anlamlarını gözden geçirin. Telaffuzu duymak için dinle düğmesine tıklayın.",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "Kelime sayfaları arasında gezinmek için Önceki/Sonraki düğmelerini kullanın.",
+  "Enhance your learning with our premium educational resources.": "Öğreniminizi premium eğitim kaynaklarımızla geliştirin.",
+  "No spam. Unsubscribe anytime.": "Spam yok. İstediğiniz zaman abonelikten çıkabilirsiniz.",
+  "Secure checkout": "Güvenli ödeme",
+  "Ad blocker detected. Please consider supporting us:": "Reklam engelleyici tespit edildi. Lütfen bizi destekleyin:",
+  "Powered by Gumroad": "Gumroad tarafından desteklenmektedir",
+  "Free articles & tutorials": "Ücretsiz makaleler ve eğitimler",
+  "Advertisement": "Reklam",
+  "Subscribe now": "Şimdi abone olun",
+  "Subscribe to stay up to date and unlock exclusive new content!": "Güncel kalmak ve özel yeni içeriklerin kilidini açmak için abone olun!",
+  "Visit our Blog": "Blogumuzu ziyaret edin",
+  "Read our Blog": "Blogumuzu okuyun",
+  "Want more interactive exercises?": "Daha fazla etkileşimli alıştırma ister misiniz?",
+  "Get it now": "Şimdi alın",
+  "Ad blocker detected. Please consider disabling it to support us.": "Reklam engelleyici tespit edildi. Bizi desteklemek için lütfen devre dışı bırakın."
 }
