--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -1,7 +1,7 @@
 {
   "Please select a language from the dropdown.": "请从下拉菜单中选择一种语言。",
-  "Please select a language:": "请选择一种语言：",
   "Select Language": "选择语言",
+  "Select language domain": "选择语言领域",
   "Tasks": "任务",
   "Unlock Points": "解锁积分",
   "Rate this Challenge": "为这个挑战评分",
@@ -16,5 +16,74 @@
   "Show Tour Button": "显示游览按钮",
   "Start Tour": "开始游览",
   "Feedback": "反馈",
-  "We'd love your feedback!": "我们很乐意听取您的反馈！"
+  "We'd love your feedback!": "我们很乐意听取您的反馈！",
+  "Start": "开始",
+  "Player Profile": "玩家资料",
+  "Save": "保存",
+  "Congratulations! You've completed the challenge successfully.": "恭喜！你已成功完成挑战。",
+  "Excellent!": "优秀！",
+  "Good job!": "干得好！",
+  "Fair attempt.": "不错的尝试。",
+  "Keep practicing!": "继续练习！",
+  "Your performance shows your current understanding. Keep practicing to improve!": "你的表现显示了你目前的理解。继续练习以提高！",
+  "Settings": "设置",
+  "Light Theme": "浅色主题",
+  "Dark Theme": "深色主题",
+  "Star Theme": "星空主题",
+  "Sound Volume": "音量",
+  "Loading...": "加载中...",
+  "Music Volume": "音乐音量",
+  "Achievements and Certificates": "成就与证书",
+  "Achievements": "成就",
+  "Certificates": "证书",
+  "Challenge History": "挑战历史",
+  "Challenges": "挑战",
+  "No challenges completed yet.": "尚未完成任何挑战。",
+  "challenges completed.": "个已完成的挑战。",
+  "Challenge": "挑战",
+  "Result": "结果",
+  "XP required": "需要经验值",
+  "Type:": "类型：",
+  "Tasks:": "任务：",
+  "Variant:": "变体：",
+  "View Challenge →": "查看挑战 →",
+  "ID:": "编号：",
+  "Item": "项",
+  "of": "共",
+  "Help": "帮助",
+  "Fill in the blanks by selecting the appropriate option for each dropdown.": "通过为每个下拉菜单选择合适的选项来填写空白。",
+  "Hints:": "提示：",
+  "The correct answer is: ": "正确答案是：",
+  "Select an option": "请选择",
+  "Success Rate": "成功率",
+  "High Performance": "高表现",
+  "Medium Performance": "中等表现",
+  "Needs Improvement": "需要改进",
+  "seconds": "秒",
+  "Share": "分享",
+  "Link copied to clipboard!": "链接已复制到剪贴板！",
+  "No text found": "未找到文本",
+  "Scroll down": "向下滚动",
+  "Next": "下一步",
+  "Select Level": "选择级别",
+  "Read aloud": "朗读",
+  "No vocabulary items available.": "没有可用的词汇项目。",
+  "Page": "页面",
+  "items": "项目",
+  "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "复习这些词汇及其含义。点击听取按钮以听取发音。",
+  "Use the Previous/Next buttons to navigate between vocabulary pages.": "使用上一页/下一页按钮在词汇页面之间导航。",
+  "Enhance your learning with our premium educational resources.": "通过我们的优质教育资源提升您的学习。",
+  "No spam. Unsubscribe anytime.": "无垃圾邮件。可随时退订。",
+  "Secure checkout": "安全结账",
+  "Ad blocker detected. Please consider supporting us:": "检测到广告拦截器。请考虑支持我们：",
+  "Powered by Gumroad": "由 Gumroad 提供支持",
+  "Free articles & tutorials": "免费文章和教程",
+  "Advertisement": "广告",
+  "Subscribe now": "立即订阅",
+  "Subscribe to stay up to date and unlock exclusive new content!": "订阅以获取最新信息并解锁独家新内容！",
+  "Visit our Blog": "访问我们的博客",
+  "Read our Blog": "阅读我们的博客",
+  "Want more interactive exercises?": "想要更多互动练习？",
+  "Get it now": "立即获取",
+  "Ad blocker detected. Please consider disabling it to support us.": "检测到广告拦截器。请考虑禁用以支持我们。"
 }
